# fenix-installer

./: .gitignore  engine.py  pyproject.toml
config/: base-service.yml  services.yml
installer/: .gitignore  architecture.py  aws.py  context.py  controller.py  inputs.py  main.py  schemas.py
installer/attrs_utils/: converters.py  validators.py
installer/cli/: __init__.py  core.py  exceptions.py  process.py  utils.py
installer/data/config/: auths.yml  base-service.yml  profiles.yml  services.yml
installer/data/schemas/: auths.schema.json  profiles.schema.json  services.schema.json
installer/data/templates/: docker-compose.tmpl
installer/models/: __init__.py  optional_prod_dev_str.py  profile.py  service.py
schemas/: services.schema.json
templates/: docker-compose.tmpl
