[tool.poetry]
name = "fenix-installer"
version = "0.1.0"
description = ""
authors = ["Diego Alloza González <sralloza@gmail.com>"]
packages = [
    { include = "installer" },
]
[tool.poetry.scripts]
fenix = 'installer.cli:main'
installer = 'installer.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.18.48"
click = "^8.0.1"
attr = "^0.3.1"
"ruamel.yaml" = "^0.17.16"
Jinja2 = "^3.0.1"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pylint = "^2.11.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
